nav bar spelling changed

--- a/Jonas-General-Purpose-Shop-SpringBoot-main/Customer/src/main/resources/templates/fragmenta.html
+++ b/Jonas-General-Purpose-Shop-SpringBoot-main/Customer/src/main/resources/templates/fragmenta.html
@@ -166,7 +166,7 @@
                         <li><a th:href="@{/high-price}">High Price</a></li>
                         <li><a href="/pdf">Price List</a></li>
                         <li><a th:href="@{/complain}">Complain</a></li>
-                     <li> <a href="http://localhost:8081/login">Login</a></li>
+                     <li> <a href="http://localhost:8081/login">Admin</a></li>
 
                         <li>
                             <a th:href="@{/cart}">
