--- a/Jonas-General-Purpose-Shop-SpringBoot-main/Customer/src/main/resources/templates/index.html
+++ b/Jonas-General-Purpose-Shop-SpringBoot-main/Customer/src/main/resources/templates/index.html
@@ -340,7 +340,7 @@ font-family: cursive;
 	<div class="all"  style="background-image: url('assets/images/wallpaperflare.com_wallpaper (20).jpg'); background-attachment: fixed; background-size: cover;">
 		<section class="stst">
 			<div>
-				<h3>Quality</h3>
+				<h3 style="color:white;font-weight:800;">Quality</h3>
 				<br />
 				<div class="animation-group">
 					<div data-animation="fadeInLeft" style="background: white;">
@@ -376,8 +376,9 @@ font-family: cursive;
     padding-top: 1rem;
     padding-bottom: 1rem;
     font-size: 3rem;
+    font-weight:800;
     font-family: 'Font Awesome 5 Free';
-    color: brown;">Crackers</h1>
+    color: white;">Crackers</h1>
 
 		<img src="assets/images/picmix.com_534347.gif" style="position:absolute">
 
@@ -780,21 +781,21 @@ opacity: 1; /* Show image on hover */
 			<h3>Trust our Crackers</h3>
 			<br />
 			<div class="animation-group">
-				<div data-animation="fadeInUp" style="    background: gold;">
+				<div data-animation="fadeInUp" style=" background: linear-gradient(45deg, #f9d849, white);">
 					<img src="assets/images/pngwing.com (18).png" alt="Animation">
 					<span class="text" style="color: black; font-weight: 900;">உங்கள் தீபாவளிக்கு மிகச் சிறந்த பட்டாசுகள்</span>
 				</div>
-				<div data-animation="fadeInUp"  style="    background: gold;">
+				<div data-animation="fadeInUp"  style="      background: linear-gradient(45deg, #f9d849, white);">
 					<img src="assets/images/pngwing.com (17).png" alt="Animation">
 					<span class="text" style="color: black; font-weight: 900;">அனைத்து விதமான பட்டாசுகள் இங்கே!</span>
 				</div>
 				<div data-animation="fadeInUp" style="padding-bottom: 7rem;
     width: 14rem;
-    padding-top: 4rem;  background: gold;">
+    padding-top: 4rem;      background: linear-gradient(45deg, #f9d849, white);">
 					<img src="assets/images/pngwing.com (19).png" alt="Animation">
 					<span class="text" style="color: black; font-weight: 900;">சிறந்த தரம், சிறந்த விலை!</span>
 				</div>
-				<div data-animation="fadeInUp"  style="    background: gold;width: 14rem;">
+				<div data-animation="fadeInUp"  style="    background: linear-gradient(45deg, #f9d849, white);width: 14rem;">
 					<img src="assets/images/pngwing.com (32).png" alt="Animation">
 					<span class="text" style="color: black; font-weight: 900;padding-top: 3rem;">மகிழ்ச்சியுடன் வெடிக்கும் பட்டாசுகள்</span>
 				</div>
