--- a/Jonas-General-Purpose-Shop-SpringBoot-main/Admin/src/main/resources/templates/sign-in.html
+++ b/Jonas-General-Purpose-Shop-SpringBoot-main/Admin/src/main/resources/templates/sign-in.html
@@ -34,7 +34,7 @@
 			</form>
 		</div>
 		<div class="card-body pb-5 my-1 flex-grow-0">
-<!--			<div class="form-group mb-0 mt-1 pt-1 text-center text-muted">Don&#x27;t have an account? <a class="customAncor" th:href = "@{/register}">Sign Up</a></div>-->
+			<div class="form-group mb-0 mt-1 pt-1 text-center text-muted">Don&#x27;t have an account? <a class="customAncor" th:href = "@{/register}">Sign Up</a></div>
 		</div>
 	</div>
 </div>
